initial view and seed

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,12 @@
-<h1> Welcome to Users Index </h1>
+
+<h1> Vagabond </h1>
+<nav>
+<ul>
+  <li><%= link_to "Sign Up", signup_path %></li>
+  <li><%= link_to "Login", login_path %></li>
+</ul>
+</nav>
+
+
 
 <div> We currently have <%= @users.length %> user(s) signed up </div>
