middle of def create

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,5 +13,9 @@
   <div>
     <%= f.password_field :password, placeholder: "Password" %>
   </div>
+  <!-- Pasword Confirm to finish -->
+  <!-- <div>
+    <%= f.password_field :password, placeholder: "Password Confirm" %>
+  </div> -->
   <%= f.submit "Sign Up" %>
 <% end %>
