--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+    <h1> VAGABOND </h1>
+    <nav> 
+      <div>
+      <%= link_to "Profile", current_user %>
+      </div>
+      <div> <%= link_to "Logout", logout_path %>
+      </div>
+    </nav>
+
+    <% flash.each do |name, msg| %>
+      <p>
+        <small> <%= name.capitalize %>: <%= msg %> </small>
+      </p>
+    <% end %>
+
+    <ul>
+    <% if current_user %>
+      <li><%= link_to "Profile", user_path(current_user) %></li>
+      <li><%= link_to "Log Out", logout_path %></li>
+    <% else %>
+      <li><%= link_to "Create Account", new_user_path %></li>
+      <li><%= link_to "Log In", login_path %></li>
+    <% end %>
+  </ul>
+
     <%= yield %>
   </body>
 </html>
