--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,10 @@
     <%= f.text_field :name, placeholder: "Name" %>
   </div>
   <div>
-    <%= f.text_field :email, placeholder: "Email" %>
+    <%= f.email_field :email, placeholder: "Email" %>
+  </div>
+  <div> 
+    <%= f.text_field :current_city, placeholder: "Current City" %> 
   </div>
   <div>
     <%= f.text_field :username, placeholder: "Username" %>
@@ -13,9 +16,8 @@
   <div>
     <%= f.password_field :password, placeholder: "Password" %>
   </div>
+
   <!-- Pasword Confirm to finish -->
-  <!-- <div>
-    <%= f.password_field :password, placeholder: "Password Confirm" %>
-  </div> -->
+
   <%= f.submit "Sign Up" %>
 <% end %>
