--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,6 @@
 <div>
  <h4> Current City: <%= @user.current_city %></h4>
 </div>
+<div> 
+	<!--<%= link_to #{}"#{@post.title}" %> -->
 <%= link_to "Edit Profile", user_path %>
