can create and edit city

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,14 @@
  <h3> Username: <%= @user.username %></h3>
 </div>
 <div>
- <h4> Date Joined: <%= @user.created_at %>
+ <h4> Date Joined: <%= @user.created_at.strftime("%B %d, %Y") %>
  </h4>
 </div>
 <div>
  <h4> Current City: <%= @user.current_city %></h4>
+</div>
+<div>
+ <h4> Avatar: <img src="<%= @user.avatar %>"</h4>
 </div>
 <div>
 <%= link_to "Edit Profile", edit_user_path %>
