little view cleanup

--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -1,8 +1,8 @@
 <h1>Edit cities</h1>
 
 <%= form_for @city do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_field :image %>
+  <%= f.text_field :name, placeholder: "Name" %>
+  <%= f.text_field :image, placeholder: "Image url" %>
   <%= f.submit "Save" %>
   <% button_to "Delete", @city, method: :delete %>
 <% end %>
