--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
  <h3> Username: <%= @user.username %></h3>
 </div>
 <div>
- <h4> Date Joined: <%= @user.created_at.strftime("%B %d, %Y") %>
+ <h4> Date Joined: <%= @user.created_at.strftime("%l:%M%P on %B %d, %Y") %>
  </h4>
 </div>
 <div>
