--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,11 @@
 <h1>Add a new post</h1>
+
 <div>
-<%= form_for @post do |f| %>
+<%= form_for ([@city, @post]) do |f| %>
   <%= f.text_field :title, placeholder: "Post Title" %>
   <%= f.text_area :body, placeholder: "Post Body" %>
   <%= f.submit "Save" %>
 <% end %>
 </div>
+
+<%= @post.id %>
