--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,19 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= @import "bootstrap"
  *= require_tree .
  *= require_self
  */
+
+ html {
+    position: relative;
+    min-height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    /* Margin bottom by footer height */
+    margin-bottom: 100px;
+    padding: 0;
+  }
