--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
       </p>
     <% end %>
 
-    <ul>
+    <ul class="nav">
     <% if current_user %>
-      <li><%= link_to "Profile", user_path(current_user) %></li>
-      <li><%= link_to "Log Out", logout_path %></li>
+      <li class="nav-item"><%= link_to "Profile", user_path(current_user) %></li>
+      <li class="nav-item"><%= link_to "Log Out", logout_path %></li>
     <% else %>
-      <li><%= link_to "Create Account", new_user_path %></li>
-      <li><%= link_to "Log In", login_path %></li>
+      <li class="nav-item"><%= link_to "Create Account", new_user_path %></li>
+      <li class="nav-item"><%= link_to "Log In", login_path %></li>
     <% end %>
   </ul>
 
