--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,6 @@
 
 <div>
 	<% @posts.each do |post| %>
-		<%= link_to post.title, user_post_path(@user.id, post)%> 
-	<% end %> 
+		<%= link_to post.title, user_post_path(@user.id, post.id)%> 
+	<% end %>
 </div>
