added styles for index/show/edit of users and cities

--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,1 +1,7 @@
 <h1> Cities index </h1>
+
+<div class = "userposts list-group list-group-flush">
+	<% @cities.each do |city| %> 
+		<%= link_to city.name, cities_path(:city_id) %>
+	<% end %> 
+</div>
