--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,21 +1,28 @@
-<div>
- <h3> Name: <%= @city.name %></h3>
-</div>
-<div>
- <h3> Image: <img src="<%= @city.image %>"></h3>
-</div>
-
-<div>
-<%= link_to "Edit City", edit_city_path %>
+<div class="card bg-dark text-white">
+  <img class="card-img" src="<%= @city.image %>" alt="Card image">
+  <div class="card-img-overlay">
+    <h1 class="card-title"><%= @city.name %></h1>
 </div>
 
 <div>
-	<% @post.each do |post| %>
-		<%= link_to post.title, city_post_path(@city.id, post.id) %> 
-	<% end %> 
+	<h3 >
+	<%= link_to "Edit City", edit_city_path%>
+	</h3>
 </div>
 
-<div> 
+<div class="cityposts">
+	<h3>
+	
+		<% @post.each do |post| %>
+			<%= link_to post.title, city_post_path(@city.id, post.id) %> 
+			
+		<% end %> 
+		
+	</h3>
+</div>
 
-	<%= link_to "New Post", new_city_post_path(@city.id) %>
+<div class='newpost'> 
+	<h3>
+		<%= link_to "New Post", new_city_post_path(@city.id) %>
+	</h3>
 </div>
