--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link src="../app/assets/stylesheets/application.scss">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
   </head>
 
   <body>
@@ -17,16 +22,17 @@
         <small> <%= name.capitalize %>: <%= msg %> </small>
       </p>
     <% end %>
-
-    <ul class="nav">
-    <% if current_user %>
-      <li class="nav-item"><%= link_to "Profile", user_path(current_user) %></li>
-      <li class="nav-item"><%= link_to "Log Out", logout_path %></li>
-    <% else %>
-      <li class="nav-item"><%= link_to "Create Account", new_user_path %></li>
-      <li class="nav-item"><%= link_to "Log In", login_path %></li>
-    <% end %>
-  </ul>
+    <nav class="navbar navbar-dark bg-dark"> 
+   
+          <% if current_user %>
+            <%= link_to "Profile", user_path(current_user) %>
+            <%= link_to "Log Out", logout_path %>
+          <% else %>
+            <%= link_to "Create Account", new_user_path %>
+            <%= link_to "Log In", login_path %> 
+          <% end %>
+        
+    </nav>
 
     <%= yield %>
   </body>
