--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,8 @@
 <h1>Edit posts</h1>
 
-<%= form_for ([@city, @post]) do |f| %>
+<%= form_for ([@user, @post]) do |f| %>
   <%= f.text_field :title, placeholder: "Post Title" %>
   <%= f.text_area :body, placeholder: "Post Body" %>
   <%= f.submit "Save" %>
-  
+
 <% end %>
