--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,16 +22,16 @@
         <small> <%= name.capitalize %>: <%= msg %> </small>
       </p>
     <% end %>
-    <nav class="navbar navbar-dark bg-dark"> 
-   
+    <nav class="navbar navbar-dark bg-dark text-light">
+
           <% if current_user %>
             <%= link_to "Profile", user_path(current_user) %>
             <%= link_to "Log Out", logout_path %>
           <% else %>
             <%= link_to "Create Account", new_user_path %>
-            <%= link_to "Log In", login_path %> 
+            <%= link_to "Log In", login_path %>
           <% end %>
-        
+
     </nav>
 
     <%= yield %>
