--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,7 @@
 <div> We currently have <%= @users.length %> user(s) signed up </div>
-<div>
-	<img src="../app/assets/images/boston.jpg" class="img-fluid" alt="Responsive Image">
-</div>
-<div>
-	<img src="../app/assets/images/sf.png" class="img-fluid" alt="Responsive image">
-</div>
-<div>
-	<img src="../app/assets/images/gibraltar.png" class="img-fluid" alt="Responsive image">
-</div>
-<div>
-	<img src="../app/assets/images/london.png" class="img-fluid" alt="Responsive image">
-</div>
+
+
+<%=image_tag("boston.png")%>
+<%=image_tag("sf.png")%>
+<%=image_tag("gibraltar.png")%>
+<%=image_tag("london.png")%>
