added title character max length

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,8 +2,8 @@
 
 <div>
 <%= form_for ([@city, @post]) do |f| %>
-  <%= f.text_field :title, placeholder: "Post Title", {:maxlength => 15} %>
-  <%= f.text_area :body, placeholder: "Post Body" %>
+  <%= f.text_field :title, placeholder: "Post Title", :maxlength => 200 %>
+  <%= f.text_area :body, placeholder: "Post Body", :minlength => 1, :allow_blank => false %>
   <%= f.submit "Save" %>
 <% end %>
 </div>
