--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
+<a href="/cities/12"><%=image_tag("sf.png")%></a>
+<a href="/cities/13"><%=image_tag("boston.png")%></a>
+<a href="/cities/14"><%=image_tag("gibraltar.png")%></a>
+<a href="/cities/15"><%=image_tag("london.png")%></a>
+
 <div> We currently have <%= @users.length %> user(s) signed up </div>
-
-
-<%=image_tag("boston.png")%>
-<%=image_tag("sf.png")%>
-<%=image_tag("gibraltar.png")%>
-<%=image_tag("london.png")%>
