fixed photo stuff

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ nav a {
 }
 
 a {
-  color: #FFFFFF;
+  color: #FFFFFF !important;
 }
 
 
@@ -52,7 +52,7 @@ form {
 
 a:hover {
   color: #FFFFFF;
-  text-decoration: none;
+  text-decoration: none !important;
 
  }
 
